# available-chat-application

./: .dockerignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cicd/: Dockerfile.baseserv  Dockerfile.chatserv  Dockerfile.database  Dockerfile.restserv  aca-db-script.sql  aca-test-db-script.sql  appSetting.txt  build_server.sh  docker-compose-build.sh  docker-compose.yml  kubernetes-deploy.sh  kubernetes.chatserv.yml  kubernetes.database.yml  kubernetes.restserv.yml  test_primary.sh  test_secondary.sh
libraries/: build_dependencies.sh
libraries/MyLibrary/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h
libraries/MyLibrary/Models/: Account.cpp  Account.h  ClientSock.cpp  ClientSock.h  Groupchat.cpp  Groupchat.h  RequestsAndResponses.cpp  RequestsAndResponses.h
libraries/MyLibrary/RestAPI/: AccountsAPI.cpp  AccountsAPI.h  BaseRestAPI.cpp  BaseRestAPI.h  RoomAPI.cpp  RoomAPI.h
libraries/MyLibrary/UserInterfaces/: UserInterface.cpp  UserInterface.h  logo.txt
source/Client/: CMakeLists.txt  mainCLI.cpp  mainGUI.cpp
source/Client/ChatApp/: adminInterface.cpp  adminInterface.h  clientClass.cpp  clientClass.h  menuClass.cpp  menuClass.h  roomClass.cpp  roomClass.h  tagClass.cpp  tagClass.h
source/Client/Text/: Text_Color.cpp  Text_Color.h  text_align.cpp  text_align.h
source/Client/UI/: Thread.cpp  Thread.h  chatbox.cpp  chatbox.h  chatbox.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
source/Server/: CMakeLists.txt  mainChatServer.cpp  mainRestServer.cpp
source/Server/ChatServer/Headers/: ChatRoom.h  ChatServer.h  TAG.h
source/Server/ChatServer/Source/: ChatServer.cpp
source/Server/Database/: AccountFunctions.cpp  AccountFunctions.h  Database.cpp  Database.h
source/Server/RestServer/: RestServerController.cpp  RestServerController.h
source/Server/RestServer/Controllers/: BaseController.cpp  BaseController.h  ServiceControllers.cpp  ServiceControllers.h
source/Server/RestServer/Services/: AccountsService.cpp  AccountsService.h  GroupchatService.cpp  GroupchatService.h
test/: CMakeLists.txt  helper.h  run_test.sh
test/CallingAPIs/: test_01_AccountsAPI_01_Authen.cpp  test_02_AccountsAPI_02_Accounts.cpp  test_03_AccountsAPI_03_Active.cpp  test_04_AccountsAPI_04_Create.cpp  test_05_AccountsAPI_05_Update.cpp  test_06_AccountsAPI_06_Delete.cpp
test/Primary/: CMakeLists.txt  test_Chatserver.cpp  test_Database.cpp  test_GroupService.cpp
test/Services/: test_01_AccountsService_01_Authen.cpp  test_02_AccountsService_02_Accounts.cpp  test_03_AccountsService_03_Active.cpp  test_04_AccountsService_04_Create.cpp  test_05_AccountsService_05_Update.cpp  test_06_AccountsService_06_Delete.cpp
test/StressTest/: CMakeLists.txt  test_SAuthen.cpp  test_SChatServer.cpp
